--- a/styles/main.css
+++ b/styles/main.css
@@ -82,3 +82,27 @@ a {
     bottom: 50%;
     font-size: 5em;
 }
+@media screen and (orientation:portrait)
+{
+	p { display: block; }
+}
+@media screen and (orientation:portrait) and (max-width:1500px)
+{
+    h1 { font-size: 12em; }
+    p { font-size: 5.5em; }
+}
+@media screen and (orientation:portrait) and (max-width:1200px)
+{
+    h1 { font-size: 10em; }
+    p { font-size: 4em; }
+}
+@media screen and (orientation:portrait) and (max-width:900px)
+{
+    h1 { font-size: 8em; }
+    p { font-size: 2.5em; }
+}
+@media screen and (orientation:portrait) and (max-width:600px)
+{
+    h1 { font-size: 6em; }
+    p { font-size: 2em; }
+}
